--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -18,5 +18,5 @@ a.cart-plant-link:hover {
 
 .custom-navbar {
   /* background-color: #1966b3; */
-  background-color: #0e458f;
+  background-color: #e31eb9;
 }
